# linal_first_lab

./: CMakeLists.txt  README.md  main.cpp  report.md
decompositions/: LU.cpp  LU.h  gauss.cpp  gauss.h
hand_work/: hand_work.cpp  hand_work.h
math_ops/: math_ops.cpp  math_ops.h
matrix/: matrix.cpp  matrix.h
second_lab/src/: DynamicArray.h  IEnumerable.h  IEnumerator.h
tests/: tests.cpp  tests.h
